# demoshell

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  subproc.py  tox.ini
demoshell/: __main__.py  main.py
test/: slowtest.sh  subproc2.py
tools/: travis.sh
