[metadata]
name = demoshell
summary = Simplified Shell for Live Demos
description-file =
    README.rst
author = Doug Hellmann
author-email = doug@doughellmann.com
home-page = https://pypi.python.org/pypi/demoshell
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages = demoshell

[entry_points]
console_scripts =
    demoshell = demoshell.main:main
